--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -1,7 +1,13 @@
+apply plugin: 'java-library'
 apply plugin: 'kotlin'
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    // Reactivex
-    implementation "io.reactivex.rxjava2:rxjava:2.2.5"
+
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.10'
+
+    testImplementation 'junit:junit:4.12'
 }
+
+sourceCompatibility = "1.7"
+targetCompatibility = "1.7"
